--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -106,6 +107,7 @@
     </style>
 </head>
 <body>
+    import { Analytics } from "@vercel/analytics/react"
   <div class="header-image">
       <img src="header.gif" alt="Header Image" style="width: 100%; max-width: 600px;">
   </div>
@@ -381,5 +383,6 @@
           }
       });
     </script>
+    <Analytics />
 </body>
 </html>
