--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     
-<!-- Google tag (gtag.js) -->
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-VXSM693T8M"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -13,9 +13,16 @@
   gtag('config', 'G-VXSM693T8M');
 </script>
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VA Connecticut Blood Thinner Lookup</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <title>Anticoagulation Management for Procedures | VA Connecticut</title>
+  <meta name="description" content="VA Connecticut's Blood Thinner Lookup Tool helps manage anticoagulation therapy for patients undergoing medical procedures, including guidance on holding blood thinners like Warfarin, Apixaban, and Rivaroxaban based on ASRA guidelines.">
+  
+  <meta name="keywords" content="blood thinner management, anticoagulation guidelines, ASRA guidelines, pre-procedure anticoagulation, epidural steroid injection, nerve block, regional anesthesia, pain management, interventional pain">
+ 
+  <meta property="og:title" content="Anticoagulation Management for Procedures | VA Connecticut">
+  <meta property="og:description" content="Simplify anticoagulation management for medical procedures with VA Connecticut's Blood Thinner Lookup Tool.">
     <style>
         body, .container {
             display: flex;
@@ -120,7 +127,7 @@
 <body>
 
   <div class="header-image">
-      <img src="header.gif" alt="Header Image" style="width: 100%; max-width: 600px;">
+      <img src="header.gif" alt="Guidance on managing blood thinners for procedures" style="width: 100%; max-width: 600px;">
   </div>
   <div class="container">
       <div class="procedure-date-container">
