--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <title>Anticoagulation Management for Procedures | VA Connecticut</title>
   <meta name="description" content="VA Connecticut's Blood Thinner Lookup Tool helps manage anticoagulation therapy for patients undergoing medical procedures, including guidance on holding blood thinners like Warfarin, Apixaban, and Rivaroxaban based on ASRA guidelines.">
   
-  <meta name="keywords" content="blood thinner management, anticoagulation guidelines, ASRA guidelines, pre-procedure anticoagulation, epidural steroid injection, nerve block, regional anesthesia, pain management, interventional pain">
+  <meta name="keywords" content="blood thinner management, anticoagulation calculator, anticoagulation guidelines, ASRA guidelines, pre-procedure anticoagulation, epidural steroid injection, nerve block, regional anesthesia, pain management, interventional pain">
  
   <meta property="og:title" content="Anticoagulation Management for Procedures | VA Connecticut">
   <meta property="og:description" content="Simplify anticoagulation management for medical procedures with VA Connecticut's Blood Thinner Lookup Tool.">
