--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
           margin: 0;
             margin-top: 20px;
         }
+      .table-responsive {
+          overflow-x: auto; /* Enables horizontal scrolling */
+      }
       .container {
           width: 80%;
           max-width: 1000px;
@@ -152,6 +155,7 @@
       </div>
       <div class="tables">
           <!-- Table 1 -->
+        <div class="table-responsive">
           <table id="table1">
             <tr>
                 <th>Medication</th>
@@ -194,7 +198,9 @@
                 <td></td>
             </tr>
           </table>
+          </div>
           <!-- Table 2 -->
+        <div class="table-responsive">
           <table id="table2">
             <tr>
               <th>Medication</th>
@@ -237,6 +243,7 @@
             <tr><td>Ticagrelor</td><td>5 days</td><td></td></tr>
             <tr><td>Tirofiban</td><td>1 day</td><td></td></tr>
           </table>
+          </div>
       </div>
   </div>
     <div class="action-buttons">
