--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             border: 1px solid #ddd;
             text-align: center;
             padding: 8px;
-            white-space: nowrap;
+            white-space: normal;
             overflow: hidden;
             text-overflow: ellipsis;
         }
