--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
             display: grid;
             grid-template-columns: repeat(7, 1fr);
             text-align: center;
-            width: 70%;
+            width: 100%;
+            max-width: 600px;
           margin: 0 auto;
             height: auto;
         }
