--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         }
       .table-responsive {
           overflow-x: auto; /* Enables horizontal scrolling */
+          overflow-y: auto;
       }
       .container {
           width: 80%;
@@ -121,7 +122,7 @@
       #summaryImage {
       display: none;
       margin-top: 20px;
-      width: 80%;
+      width: 100%;
         }
       .header-image {
           text-align: center;
