--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
       display: none;
       margin-top: 20px;
       width: 100%;
+      max-width: 1000px;
         }
       .header-image {
           text-align: center;
